--- a/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
+++ b/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
@@ -13,6 +13,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+		<PackageReference Include="Uno.UI" Version="2.0.512-dev.3530" />
 
 		<ProjectReference Include="..\Microsoft.Toolkit\Microsoft.Toolkit.csproj" />
 	</ItemGroup>
