--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras">
+<Project Sdk="MSBuild.Sdk.Extras">
 
   <PropertyGroup>
 		<TargetFrameworks>$(TargetFrameworksOverride)</TargetFrameworks>
@@ -17,7 +17,7 @@
   <ItemGroup>
     <!-- This is here to prevent a conflict in certain circumstances -->
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="Uno.UI" Version="2.0.512-dev.3565" />
+    <PackageReference Include="Uno.UI" Version="2.0.512-dev.4019" />
     
     <ProjectReference Include="..\Microsoft.Toolkit.Parsers\Microsoft.Toolkit.Parsers.csproj" />  
     <ProjectReference Include="..\Microsoft.Toolkit.Services\Microsoft.Toolkit.Services.csproj" />
@@ -25,7 +25,7 @@
     
   </ItemGroup>
 	<ItemGroup Condition="'$(TargetFrameworkIdentifier)' == 'MonoAndroid' or '$(TargetFrameworkIdentifier)' == 'Xamarin.iOS'">
-		<PackageReference Include="Uno.UI" Version="2.0.512-dev.3565" />
+		<PackageReference Include="Uno.UI" Version="2.0.512-dev.4019" />
 	</ItemGroup>
 
 	<Import Project="..\uno.ui.include.props" />
