Disable Nerdbank inside VS

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -94,7 +94,7 @@
     <NoWarn>$(NoWarn);CS1998</NoWarn>
   </PropertyGroup>
 
-  <ItemGroup Condition="!$([MSBuild]::IsOsUnixLike())">
+  <ItemGroup Condition="!$([MSBuild]::IsOsUnixLike()) and '$(BuildingInsideVisualStudio)'=='' ">
     <PackageReference Include="Nerdbank.GitVersioning" Version=" 2.1.65" PrivateAssets="all" />
   </ItemGroup>
 
